WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/Service_Level_Defaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Service Level Defaults</label>
</CustomObject>