WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Days_before_notification__c.field-meta.xml
<CustomField>
    <fullName>Days_before_notification__c</fullName>
    <label>Days before notification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>