WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Num_Days_Ahead_On_Target__c.field-meta.xml
<CustomField>
    <fullName>Num_Days_Ahead_On_Target__c</fullName>
    <inlineHelpText>The number days until a next call/meeting that is considered &quot;green&quot; or on- target</inlineHelpText>
    <label>Num Days Ahead - On Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>