WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Num_Days_Ahead_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Num_Days_Ahead_Overdue__c</fullName>
    <inlineHelpText>Number of days ahead for a call to be &quot;red&quot; or &quot;overdue&quot;. For consistency with the other fields, this is stored as number of days ahead, even though it may be set as days *after*. In this case, set as a negative number.</inlineHelpText>
    <label>Num Days Ahead - Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>