WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Tier_A_In_Person_Meetings_Year__c.field-meta.xml
<CustomField>
    <fullName>Tier_A_In_Person_Meetings_Year__c</fullName>
    <label>Tier A - In-Person Meetings/Year</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>