WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Tier_A_Relationship_Calls_Year__c.field-meta.xml
<CustomField>
    <fullName>Tier_A_Relationship_Calls_Year__c</fullName>
    <inlineHelpText>Default number of Relationship Calls/Year for a Tier A client</inlineHelpText>
    <label>Tier A - Relationship Calls/Year</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>