WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Tier_C_In_Person_Meetings_Year__c.field-meta.xml
<CustomField>
    <fullName>Tier_C_In_Person_Meetings_Year__c</fullName>
    <inlineHelpText>Default number of In-Person Meetings/Year for a Tier C client</inlineHelpText>
    <label>Tier C - In-Person Meetings/Year</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>