WMG112519/force-app/main/default/objects/Service_Level_Defaults__c/fields/Tier_D_In_Person_Meetings_Year__c.field-meta.xml
<CustomField>
    <fullName>Tier_D_In_Person_Meetings_Year__c</fullName>
    <inlineHelpText>Default number of In-Person Meetings/Year for a Tier D client</inlineHelpText>
    <label>Tier D - In-Person Meetings/Year</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>